src/test/ui/asm/aarch64/srcloc.stderr
error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:11:15
   |
LL |         asm!("invalid_instruction");
   |               ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:15:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:13
   |
LL |             invalid_instruction
   |             ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:20:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:13
   |
LL |             invalid_instruction
   |             ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:26:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:13
   |
LL |             invalid_instruction
   |             ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:33:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:13
   |
LL |             invalid_instruction
   |             ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:38:14
   |
LL |         asm!(concat!("invalid", "_", "instruction"));
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:42:14
   |
LL |             "invalid_instruction",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:48:14
   |
LL |             "invalid_instruction",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:55:14
   |
LL |             "invalid_instruction",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:62:13
   |
LL |             concat!("invalid", "_", "instruction"),
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:69:13
   |
LL |             concat!("invalid", "_", "instruction"),
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:76:14
   |
LL |             "invalid_instruction1",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction1
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:77:14
   |
LL |             "invalid_instruction2",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction2
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:83:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction1
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:83:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction2
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:92:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction1
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:92:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction2
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:96:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction3
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:96:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:4:1
   |
LL | invalid_instruction4
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:107:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction1
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:107:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction2
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:111:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:4:1
   |
LL | invalid_instruction3
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:111:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:5:1
   |
LL | invalid_instruction4
   | ^

error: aborting due to 23 previous errors

